--- a/04-react/react-02/src/components/cities/cities.css
+++ b/04-react/react-02/src/components/cities/cities.css
@@ -6,3 +6,7 @@
 #idAddWarning {
     color: crimson;
 }
+
+#idSideBar {
+    width: 250px;
+}
